tests/ui/internal_allocator.stderr
error[E0603]: module `allocator` is private
 --> tests/ui/internal_allocator.rs:1:21
  |
1 | use moirai::entity::allocator;
  |                     ^^^^^^^^^ private module
  |
note: the module `allocator` is defined here
 --> src/entity/mod.rs
  |
  | mod allocator;
  | ^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/internal_allocator.rs:1:31
  |
1 | use moirai::entity::allocator;
  |                               ^ consider adding a `main` function to `$DIR/tests/ui/internal_allocator.rs`
